k8s/04-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: devops-final

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "devops", "-d", "devopsdb"]
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
