k8s/06-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-api
  namespace: devops-final

spec:
  replicas: 1

  selector:
    matchLabels:
      app: devops-api

  template:
    metadata:
      labels:
        app: devops-api

    spec:
      containers:
        - name: devops-api
          image: us-central1-docker.pkg.dev/devops-final-gcp/devops-final/devops-api:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              name: http

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 128Mi
