k8s/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-lb
  namespace: devops-final
spec:
  type: LoadBalancer
  selector:
    app: devops-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
